# ADDS

./: .gitignore  README.md  pyproject.toml
adds_sim/: __init__.py  batch.py  benchmarks.py  cli.py  comparison.py  controller_portfolio.py  controllers.py  data.py  defaults.py  learned_controller.py  metrics.py  ml.py  parameters.py  policy_search.py  profiles.py  robustness.py  run_controller_portfolio.py  run_controller_robustness_portfolio.py  run_robustness.py  scenario_catalog.py  simulator.py  train_imitation.py  visualization.py
app/: README.md  streamlit_app.py
docs/: acceptance_tests.md  glossary.md  metrics.md  ml_strategy.md  open_decisions.md  parameter_dictionary.md  project_idea.md  roadmap.md  scenarios.md  signal_dictionary.md  system_architecture.md  vehicle_dynamics.md
tests/: test_phase1_acceptance.py  test_phase2_state_machine.py  test_phase3_baselines.py  test_phase4_data_infrastructure.py  test_phase5_imitation_learning.py  test_phase5_policy_search.py  test_phase6_robustness.py  test_phase7_controller_portfolio_report.py  test_phase7_visualization.py
